--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "fuse.js": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
     "path": "^0.12.7",
