--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fuse.js": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.0",
+    "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
